msa/mmp/medat/k8s-origin/400-mmp-medat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-medat
  labels:
    appName: mmp
    svcName: medat
    version: v1
spec:
  selector:
    matchLabels:
      appName: mmp
      svcName: medat
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        appName: mmp
        svcName: medat
        version: v1
      #annotations:
        #sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: medat
        image: docker-registry.default.svc.cluster.local:5000/mmp/medat:latest
        #imagePullPolicy: IfNotPresent
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        args: ["java","-Djava.security.egd=file:/dev/./urandom","-Dspring.profiles.active=$(spring.profiles.active)","-jar","/app.jar"]
        volumeMounts:
        - mountPath: /var/log/LAMP/
          name: lamp-volume
        - mountPath: /etc/localtime
          name: timezone-config
        securityContext:
          privileged: true
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
      nodeSelector:
        ktis-node: "true"
        #node-role.kubernetes.io/infra: "true"
      volumes:
      - name: lamp-volume
        hostPath:
          # directory location on host
          path: /var/log/mmp/LAMP/
          # this field is optional
          type: DirectoryOrCreate
      - hostPath:
          path: /usr/share/zoneinfo/Asia/Seoul
        name: timezone-config
