msa/mmp/medat/k8s-origin/500-mmp-medat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-medat
  labels:
    appName: mmp
    svcName: medat
    version: v1
spec:
  #type: NodePort
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
  #clusterIP: None
  selector:
    appName: mmp
    svcName: medat
    version: v1
