msa/mmp/medat/k8s-origin/600-mmp-medat-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    appName: medat
    svcName: athn
    version: 1.0.0
  name: route-medat
spec:
  host: test.insuretech.kt.com
  path: /medat
  port:
    targetPort: http
  tls:
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIGGTCCBAGgAwIBAgIQE31TnKp8MamkM3AZaIR6jTANBgkqhkiG9w0BAQwFADCB
[...]
      MntHWpdLgtJmwsQt6j8k9Kf5qLnjatkYYaA7jBU=
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIFdzCCBF+gAwIBAgIQE+oocFv07O0MNmMJgGFDNjANBgkqhkiG9w0BAQwFADBv
[...]
      0fKtirOMxyHNwu8=
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIENjCCAx6gAwIBAgIBATANBgkqhkiG9w0BAQUFADBvMQswCQYDVQQGEwJTRTEU
[...]
      mnkPIAou1Z5jJh5VkpTYghdae9C8x49OhgQ=
      -----END CERTIFICATE-----
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIHLjCCBhagAwIBAgIQOO7kgEA1TXra8OnlU3YfLTANBgkqhkiG9w0BAQsFADCB
[...]
      uRT+Xqz+4ibdSteU61G3jyrt
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Redirect
    key: |-
      -----BEGIN RSA PRIVATE KEY-----
      MIIEpAIBAAKCAQEAhrCgZR2fuexleY1qnGgRFBSZeLYdnNzVElPAQ72JH/icKjd0
[...]
      IohfEwqalSH2gPMNSX4UmQWr6/eXJvJ5rbwQwrqencJ7WCph1v+/lw==
      -----END RSA PRIVATE KEY-----
    termination: edge
  to:
    kind: Service
    name: service-medat
    weight: 100
  wildcardPolicy: None
